--- a/BGStudio.App/appsettings.json
+++ b/BGStudio.App/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DBDefaultConnection": "Server=localhost;port=3306;Database=BGStudioDB;user=root;password=admin;"
-  }
+  },
+  "Auth": {
+    "Issuer": "authServer",
+    "Audience": "resourceServer",
+    "Secret": "SecretKey123456789+-",
+    "TokenLifetime": "3600" 
+  } 
 }
