--- a/BGStudio.BLL/BGStudio.BLL.csproj
+++ b/BGStudio.BLL/BGStudio.BLL.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BGStudio.DAL\BGStudio.DAL.csproj" />
   </ItemGroup>
 
